Fixed highlight text background covering other text - line-height

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ body{
 
 .detailsSection{
     border: 1px solid #FB3256;
-    width: 270px;
+    width: 272px;
     height: 320px;
     order: 3;
     margin: 4%;
@@ -120,6 +120,8 @@ body{
 
 .highlight{
     background-color: #FFFF00;
+    display: inline;
+    line-height: 16px;
 }
 
 .factsList{
